--- a/Main.ipynb
+++ b/Main.ipynb
@@ -16,7 +16,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -226,7 +226,7 @@
         "id": "0c7CVNBiTpDh",
         "outputId": "af6d76b6-188a-4214-d8fe-5e7392a2fbea"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -275,7 +275,7 @@
         "id": "v7W5V_m9VbIs",
         "outputId": "e92aa3e2-da1a-4380-d7a6-f5237854e153"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -323,7 +323,27 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 워드클라우드 및 자주 언급된 단어 분석"
+        "## 텍스트 마이닝 (Text Mining), 자연어 처리 (NLP),\n",
+        "\n",
+        "## 데이터 클렌징(Data Cleansing) / 데이터 전처리(Data Preprocessing)\n",
+        "\n",
+        "## 텍스트 정제 (Text Cleaning)\n",
+        "\n",
+        "#### 불필요한 데이터(예: HTML 태그, 특수 문자, 공백 등) 제거.\n",
+        "#### 불용어(Stop Words) 제거.\n",
+        "#### 대소문자 변환, 어간 추출(Stemming), 표제어 추출(Lemmatization) 등.\n",
+        "\n",
+        "## 토큰화(Tokenization)\n",
+        "\n",
+        "#### 텍스트를 단어 또는 문장 단위로 나누는 과정.\n",
+        "\n",
+        "## 빈도 분석(Frequency Analysis)\n",
+        "\n",
+        "#### 단어 출현 빈도를 분석하고, 이를 기반으로 자주 언급된 단어를 랭킹으로 정리.\n",
+        "\n",
+        "## 시각화(Visualization)\n",
+        "\n",
+        "#### 워드클라우드 생성 등을 통해 텍스트 데이터를 직관적으로 표현."
       ],
       "metadata": {
         "id": "rMA5Yqb9buRa"
@@ -380,7 +400,7 @@
         "id": "XMmsOd4VVbpz",
         "outputId": "c712ee23-b024-433d-f416-45940bfd6a73"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -532,7 +552,7 @@
         "id": "A7tFx2jyWCr2",
         "outputId": "0cc99e02-af59-4b19-9c94-4eaa2a4aa60a"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -685,7 +705,7 @@
         "id": "ypYTUUAhWyut",
         "outputId": "6453a273-e685-4a4a-9640-afb987f67f4e"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -838,7 +858,7 @@
         "id": "T1eLbJgdXNUY",
         "outputId": "3d1ea1e5-4ea5-4cc9-e7b0-e02b9178cec1"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -991,7 +1011,7 @@
         "id": "KlIS34MMZgDY",
         "outputId": "b7bf7066-30fb-426e-f68b-d23109b047ed"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1132,7 +1152,7 @@
         "id": "CPhAbUtgXcS5",
         "outputId": "0af57819-f503-48ad-b552-29c29c4dcb74"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
